fixing mobile alignments

--- a/src/styles/screen.sass
+++ b/src/styles/screen.sass
@@ -272,7 +272,6 @@ $navigation__transition: max-height 0.5s ease-in-out
 .aboutMe
   display: flex
   flex-direction: column
-  justify-content: center
 
 .groups
   display: flex
@@ -606,6 +605,8 @@ button
     margin: 250px 0px 0px 0px
   #skills
     padding: 100px 50px 100px 50px
+  .columns
+    padding: 0 100px 0 100px
   #contact
     display: flex
     justify-content: center
@@ -617,7 +618,7 @@ button
   .buttons
     margin: 0
   #graphicRow
-    margin: -200px 30vw 0 20vw
+    margin: 0px 30vw 0 20vw
 
 
 @mixin bigPortImage
@@ -763,6 +764,7 @@ button
       margin: 0
       padding-left: 5vw
       padding-right: 5vw
+      padding-top: 10px
     .contactFont
       justify-content: center
       width: 100%
